# autonllb

./: .gitignore  README.md  WORKFLOW.md  batch_sentence_chunks.py  check_reference.py  check_split.py  colab_code.md  install.py  install.sh  prepare_data.py  prepare_sentences.py  prepare_translations.py  pyproject.toml  refactoring_notes.md  run_training.py  test_fix.py  test_parser.py  test_regex.py  test_split.py  translate.py
