[project]
name = "nllb-en-hil-finetune"
version = "0.2.0"
description = "Fine-tune NLLB for English-Hiligaynon translation with data preparation and training pipelines"
requires-python = "==3.12.*"
dependencies = [
    "transformers>=4.30.0",
    "datasets>=2.20.0",
    "sentencepiece>=0.1.98",
    "accelerate>=0.2",
    "googletrans==4.0.2"
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter",
]
